--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "multi-apps-project",
   "version": "0.1.0",
-  "homepage": "https://antonrufus.github.io/blabla-bla/",
+  "homepage": "https://antonrufus.github.io/multi-apps-project/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
