--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "homepage": "https://antonrufus.github.io/multi-apps-project/",
   "private": true,
   "dependencies": {
+    "@emotion/css": "^11.1.3",
+    "@emotion/react": "^11.1.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "emotion": "^11.0.0",
     "marked": "^1.2.7",
     "react": "^17.0.1",
     "react-alert": "^7.0.2",
