--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-alert": "^7.0.2",
     "react-alert-template-basic": "^1.0.0",
     "react-dom": "^17.0.1",
+    "react-infinite-scroll-component": "^5.1.0",
     "react-markdown": "^5.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
