--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.1.10",
     "classnames": "^2.2.6",
     "emotion": "^11.0.0",
+    "lodash.shuffle": "^4.2.0",
     "marked": "^1.2.7",
     "react": "^17.0.1",
     "react-alert": "^7.0.2",
