--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://antonrufus.github.io/multi-apps-project/",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.13.6",
     "@emotion/css": "^11.1.3",
     "@emotion/react": "^11.1.4",
     "@testing-library/jest-dom": "^5.11.4",
