--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-markdown": "^5.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-speech-kit": "^3.0.1",
+    "react-timer-hook": "^3.0.4",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
