--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "4.0.1",
     "react-speech-kit": "^3.0.1",
     "react-timer-hook": "^3.0.4",
+    "styled-components": "^5.3.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
